              So you'll have to fix your JavaScript code if you use the URL named "creme_core__set_brick_state".
        # The method 'creme_core.tests.views.base.ButtonTestCaseMixin.iter_instance_button_nodes()' has been renamed 'iter_button_nodes()'
          (because of the new method 'get_global_buttons_node()').
        # Apps :
            * Creme_config :
                - In 'urls' :
                    - The view named 'creme_config__create_detailviews_bricks' has been renamed 'creme_config__create_detailview_bricks'.
                    - The view named 'creme_config__delete_home_brick' has been renamed 'creme_config__delete_home_bricks'.
                - In 'forms' :
                    - The class 'bricks._CustomBrickConfigItemBaseForm' has been removed.
                    - In 'creme_property_type', these classes have been removed :
                        - _CremePropertyTypeBaseForm
                        - CremePropertyTypeCreationForm
                        - CremePropertyTypeEditionForm
                    - The global dictionary 'forms.setting._FIELDS' has been removed;
                      see the new class attribute 'creme_core.core.setting_key._SettingKey.FORM_FIELDS' instead.
                - The template 'user_settings.html' has been renamed 'user-settings.html' to be more consistent.
            * Persons :
                - In the method 'models.Address.info_field_names()' (use by several form generators for Address),
                  the excluded fields are just not-viewable fields (it was a hard coded list before).
                - The hat-card bricks have been reworked to facilitate the modification of small summaries (activities, acts, opportunities).
                  A base class 'CardSummary' has been introduced. The classes 'ContactCardHatBrick' & 'OrganisationCardHatBrick' get
                  new attributes "intro_summary" & "summaries"; so its easier to change summaries from external code (the dependencies of the bricks