@@ -68,41 +68,3 @@
     {% brick_display bricks %}
     {% brick_end %}
 {% endblock %}
-
-{% comment %}
-{% block content %}
-    <div class="hat-bar-container">
-        <div class="hat-bar">{% translate 'Property type' as title %}
-            <div class="bar-icon">{% widget_icon name='property' size='brick-hat-bar' label=title %}</div>
-            <div class="bar-title">
-                <h1>
-                    {{title}} : {{object|capfirst}}
-                    {% if not object.enabled %}<span class="bar-deleted-indicator">[{% translate 'Disabled' %}]</span>{% endif %}
-                </h1>
-            </div>
-            {% if object.is_custom %}
-            <div class="bar-actions">
-              {% with admin_perm=user|has_perm_to_admin:'creme_config' %}{# TODO: creme_core ?! #}
-                {% if object.enabled %}
-                <div class='bar-action'>
-                    <a href="{{object.get_edit_absolute_url}}" class="bar-button{% if not admin_perm %} forbidden is-disabled{% endif %}">
-                        {% widget_icon name='edit' size='brick-hat-bar-button' label=_('Edit') %}
-                    </a>
-                </div>
-                {% endif %}
-                <div class='bar-action'>
-                    <a onclick="creme.utils.confirmSubmit(this, '{{confirm_msg|escapejs}}');" class="bar-button{% if not admin_perm %} forbidden is-disabled{% endif %}">
-                        {% widget_icon name='delete' size='brick-hat-bar-button' %}
-                        <form method="POST" action="{{object.get_delete_absolute_url}}" style="display:none;">{% csrf_token %}</form>
-                    </a>
-                </div>
-              {% endwith %}
-            </div>
-            {% endif %}
-        </div>
-    </div>
-    {% brick_declare bricks %}
-    {% brick_display bricks %}
-    {% brick_end %}
-{% endblock %}
-{% endcomment %}
